Cleanup org-mode leftovers

--- a/source/onesheet.html.erb
+++ b/source/onesheet.html.erb
@@ -5,13 +5,13 @@ layout: no-nav
 <div class="row">
     <div class="col-1"></div>
     <div class="col-10">
-        <div id="outline-container-orgcf3d80c" class="outline-2">
-            <h2 id="orgcf3d80c">HOT CLUB WORMS</h2>
+        <div>
+            <h2>HOT CLUB WORMS</h2>
         </div>
 
-        <div id="outline-container-org4d597d1" class="outline-2">
-            <h2 id="org4d597d1">COPY</h2>
-            <div class="outline-text-2" id="text-2">
+        <div>
+            <h2>COPY</h2>
+            <div>
                 <p>
                     Die fünf Musiker des <b>Hot Club Worms</b> spielen Hot Jazz ganz im Sinne des <i>Quintette du Hot Club de France</i>,
                     jenes legendäre Quintett gegründet von Django Reinhardt und Stéphane Grappelli im Paris der 1930er Jahre.
@@ -30,9 +30,9 @@ layout: no-nav
             </div>
         </div>
 
-        <div id="outline-container-org2a53728" class="outline-2">
-            <h2 id="org2a53728">PRESS</h2>
-            <div class="outline-text-2" id="text-3">
+        <div>
+            <h2>PRESS</h2>
+            <div>
                 <p>
                     &raquo; Für die musikalische Unterhaltung beim
                     Sommerfest der Mobilisten sorgte die Band "Hot
@@ -44,10 +44,10 @@ layout: no-nav
             </div>
         </div>
 
-        <div id="outline-container-orge96d0c6" class="outline-2">
-            <h2 id="orge96d0c6">PROMOTION LINKS</h2>
-            <div class="outline-text-2" id="text-4">
-                <dl class="org-dl">
+        <div>
+            <h2>PROMOTION LINKS</h2>
+            <div>
+                <dl>
                     <dt>Website</dt><dd><a href="http://www.hotclubworms.de">http://www.hotclubworms.de</a></dd>
                     <dt>Youtube</dt><dd><a href="https://www.youtube.com/channel/UCE5cYaqH8XRtUiIkSReGpiw">https://www.youtube.com/channel/UCE5cYaqH8XRtUiIkSReGpiw</a></dd>
                     <dt>Fotos</dt><dd><a href="https://drive.google.com/drive/folders/1V7xPjPjRdi7TVT0wXgtcEhG6m2IcBmeP?usp=sharing">https://drive.google.com/drive/folders/1V7xPjPjRdi7TVT0wXgtcEhG6m2IcBmeP?usp=sharing</a></dd>
@@ -55,10 +55,10 @@ layout: no-nav
             </div>
         </div>
 
-        <div id="outline-container-org43b3330" class="outline-2">
-            <h2 id="org43b3330">SOCIAL MEDIA</h2>
-            <div class="outline-text-2" id="text-5">
-                <dl class="org-dl">
+        <div>
+            <h2>SOCIAL MEDIA</h2>
+            <div>
+                <dl>
                     <dt>Instagram</dt><dd>@hotclubworms (<a href="https://www.instagram.com/hotclubworms/">https://www.instagram.com/hotclubworms/</a>)</dd>
                     <dt>Facebook</dt><dd>hotclubworms (<a href="https://www.facebook.com/hotclubworms/">https://www.facebook.com/hotclubworms/</a>)</dd>
                 </dl>
