Add contact information to one-sheet

--- a/source/onesheet.html.erb
+++ b/source/onesheet.html.erb
@@ -29,7 +29,15 @@ layout: no-nav
                 </p>
             </div>
         </div>
-
+        <div>
+            <h2>CONTACT</h2>
+            <div>
+                <dl>
+                    <dt>E-Mail</dt><dd><a href="mailto:info@hotclubworms.de">info@hotclubworms.de</a></dd>
+                    <dt>Phone</dt><dd><a href="tel:+4915238508500">+49 152 38508500</a></dd>
+                </dl>
+            </div>
+        </div>
         <div>
             <h2>PRESS</h2>
             <div>
