--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -71,7 +71,8 @@
                     &copy; 2021 Sebastian Christ -
                     <%= link_to "Impressum", "/imprint.html" %> -
                     <%= link_to "Datenschutzerklärung", "/privacy-policy.html" %> -
-                    <%= link_to "Cookie-Einstellungen", "#", id: "cookie-settings"%>
+                    <%= link_to "Cookie-Einstellungen", "#", id: "cookie-settings"%> -
+                    <%= link_to "Promoter One-Sheet", "/onesheet" %>
                 </p>
             </footer>
         </div>
