Don't highlight cookie consent buttons
It is not allowed to highlight the "accept" in any way.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,9 +25,10 @@
                         <br/>
                         <%= link_to "Mehr Informationen.", "/privacy-policy.html#cookies", id: "cookies-eu-more" %>
                         <br/>
+                        <br/>
                         <div>
-                            <button class="button outline secondary" id="cookies-eu-reject">Ablehnen</button>
-                            <button class="button success" id="cookies-eu-accept">Akzeptieren</button>
+                            <button class="button outline primary" id="cookies-eu-reject">Ablehnen</button>
+                            <button class="button outline primary" id="cookies-eu-accept">Akzeptieren</button>
                         </div>
                     </div>
                 </div>
