Add joschka bio

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -113,6 +113,43 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
+                <h4>Joschka Preßler</h4>
+                <p>
+                    Joschka ist seit Herbst 2022 mit seinem Kontrabass
+                    für den <strong>Hot Club Worms</strong> an den
+                    tiefen Saiten unterwegs.
+                </p>
+                <p>
+                    Er spielt seit seiner Schulzeit Bass im
+                    Jazzbereich, vorwiegend aber E-Bass, bis ihn
+                    schließlich vor vier Jahren der Kontrabass
+                    endgültig in den Bann zog. Seitdem plagt er sich
+                    mit dem äußerst unpraktischen, aber
+                    wohlklingenden, eher mit einem Möbelstück als mit
+                    einem Instrument zu verwechselnden Ungetüm ab.
+                </p>
+                <p>
+                    Trotz all der Übel, die mit dieser Monstrosität
+                    einhergehen, schafft er es ihr ein paar für den
+                    <strong>Hot Club Worms</strong> mittlerweile
+                    unabkömmliche Töne zu entlocken. Beim Spiel
+                    belässt er es aber nicht nur bei der im Jazz
+                    manouche typischen Funktion des Basses als pures
+                    Begleitinstrument, aus dessen unvermeidlichem
+                    Schatten vor allem die Gitarren hervorstachen,
+                    sondern weiß sich auch, falls nötig, gegen seine
+                    Mitspieler musikalisch zu behaupten.
+                </p>
+            </div>
+            <div class="col-2"></div>
+            <div class="col-4">
+                <div class="profile-image is-full-width">
+                    <%= image_tag "joschka.jpg" %>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
                 <h4>Achim Kraus (ts, as, ss)</h4>
                 <p>
                     Achim kann mittlerweile auf über etwa 40 Jahre
