Add videos to media page

--- a/source/media.html.erb
+++ b/source/media.html.erb
@@ -5,6 +5,24 @@ title: Media
 
 <div class="gallery">
 
+    <div
+        data-service="youtube"
+        data-id="Zy1ISYf5qR4"
+        data-autoscale>
+    </div>
+
+    <div
+        data-service="youtube"
+        data-id="9oCbs9QjhGU"
+        data-autoscale>
+    </div>
+
+    <div
+        data-service="youtube"
+        data-id="Rd7eOVksRoQ"
+        data-autoscale>
+    </div>
+
     <%= image_tag  "gallery/1.jpg" %>
     <div class="row">
         <div class="col"><%= image_tag "gallery/2.jpg" %></div>
@@ -25,24 +43,6 @@ title: Media
 
     <%= image_tag "gallery/9.jpg" %>
     <%= image_tag "gallery/10.jpg" %>
-
-    <div
-        data-service="youtube"
-        data-id="9KaQftBl7vg"
-        data-autoscale>
-    </div>
-
-    <div
-        data-service="youtube"
-        data-id="jV3yri0Cjyc"
-        data-autoscale>
-    </div>
-
-    <div
-        data-service="youtube"
-        data-id="6vXOR7ssxrM"
-        data-autoscale>
-    </div>
 
     <div
         data-service="youtube"
