--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -88,6 +88,60 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
+                <h4>M. Daniel Schneeberger (g)</h4>
+                <p>
+                    M. Daniel Schneeberger ist seit Anfang 2022
+                    Mitglied des <strong>Hot Club Worms</strong>.
+                </p>
+                <p>
+                    Darüber hinaus ist er Mitglied der bedeutsamen
+                    Musikerfamilie Schneeberger, welche nicht nur
+                    musikalisch im Bereich des Gipsy Jazz verwurzelt
+                    ist, sondern dort auch ein bedeutendes Fundament
+                    gelegt hat.
+                </p>
+                <p>
+                    Bereits im Alter von fünf Jahren hat Daniel die
+                    Violine entdeckt und wurde von seinem Großvater
+                    Josef Schneeberger, der ein Virtuose an der Geige
+                    war, zum Manouche-Musiker ausgebildet.
+                </p>
+                <p>
+                    In Osterhofen (Niederbayern) geboren und
+                    aufgewachsen, hat Daniel durch sein musikalisches
+                    Umfeld mit bereits sieben Jahren wertvolle
+                    Bühnenerfahrung sammeln können und war im Stande
+                    bei Konzertreihen seinen älteren Bruder A. Daniel
+                    Schneeberger auf der Bühne zu begleiten.
+                </p>
+                <p>
+                    Im Laufe seiner musikalischen Karriere hat Daniel
+                    nicht nur der Geige seine Aufmerksamkeit gewidmet. Mit
+                    13 Jahren hat er die Gitarre und mit 18 Jahren das
+                    Klavier entdeckt.
+                </p>
+                <p>
+                    Mit 22 Jahren heiratete Daniel in die
+                    bekannte Musikerfamilie Köhler ein und durfte
+                    somit täglich mit dem berühmten und bedeutenden
+                    europäischen Swing-Geiger Wedeli Köhler
+                    musizieren.
+                </p>
+                <p>
+                    Auch mit weiteren bekannten Größen des Jazz
+                    manouche wie Tchavolo Schmitt, Sascha Reinhardt
+                    uvm. hat Daniel in der Vergangenheit musiziert.
+                </p>
+            </div>
+            <div class="col-2"></div>
+            <div class="col-4">
+                <div class="profile-image is-full-width">
+                    <%= image_tag "manolito.jpg" %>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
                 <h4>Sebastian Rudolfo Christ (g)</h4>
                 <p>
                     Sebastian ist ein in Worms am Rhein ansässiger
