--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -167,7 +167,7 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
-                <h4>Joschka Preßler</h4>
+                <h4>Joschka Preßler (b)</h4>
                 <p>
                     Joschka ist seit Herbst 2022 mit seinem Kontrabass
                     für den <strong>Hot Club Worms</strong> an den
